# FunkyBoyAndroid

./: .gitignore  .gitmodules  README.md  build.gradle
.github/workflows/: ci.yml
.github/workflows/scripts/: build.sh
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  display_android.cpp  display_android.h  jni_adhesive.cmake  joypad_android.cpp  joypad_android.h  logging.h  main.cpp
app/src/main/cpp/source/: fb_jni.cpp  fb_jni.h  main.cpp
app/src/main/cpp/source/controllers/: audio_android.cpp  audio_android.h  display_android.cpp  display_android.h  joypad_android.cpp  joypad_android.h
app/src/main/cpp/source/dynamic/: fb_app_strings.cpp.in  fb_app_strings.h.in
app/src/main/cpp/source/engine/: engine.h  init_display.cpp  init_display.h  ui_obj.h
app/src/main/cpp/source/fba_util/: app_state.cpp  app_state.h  emulator_state.cpp  emulator_state.h  logging.h  saved_state.h  shared.h
app/src/main/cpp/source/state/: engine.h  ui_obj.h
app/src/main/cpp/source/ui/: draw_bitmap.cpp  draw_bitmap.h  draw_controls.cpp  draw_controls.h  draw_text.cpp  draw_text.h
app/src/main/cpp/source/util/: LockFreeQueue.h
app/src/main/java/lu/kremi151/funkyboy/: EmulatorActivity.kt  FunkyBoyActivity.kt  MainActivity.kt
app/src/main/java/lu/kremi151/funkyboy/adapter/: MainTilesAdapter.kt
app/src/main/java/lu/kremi151/funkyboy/util/: Actions.kt
app/src/main/res/drawable/: ic_add_to_home_screen.xml  ic_file.xml  ic_gameboy.xml
app/src/main/res/layout/: activity_main.xml  tile_option.xml
app/src/main/res/values/: ic_launcher_background.xml  ids.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
